<resources>
    <string name="app_name">University</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_logo">LogoActivity</string>
    <string name="schedule">Schedule</string>
    <string name="course">Course</string>
    <string name="group">Group</string>
    <string name="message">Message</string>
    <string name="me">Me</string>
    <string name="login">Log In</string>
    <string name="logout">Log out</string>
    <string name="createaccount">Create New Account</string>
    <string name="createaccount1">Create</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="createaccount_title">Create New Account:</string>
    <string name="createaccount_des">Please use a ntu.edu.tw email address.</string>
    <string name="title_activity_add_course">AddCourse</string>
    <string name="done">Done</string>
    <string name="network_error">No Internet Connection!</string>
    <string name="academic_year">103-2</string>
    <string name="passwd_not_match">Password does not match</string>
    <string name="email_incorrent">Need a NTU email account</string>
    <string name="user_exist">User Exist!</string>
    <string name="login_error">Email or Password error!</string>
    <string name="input_course_name">Course Name</string>
    <string name="teacher">Teacher: </string>
    <string name="Time">Time: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="title_activity_course_time">Modify Course</string>
    <string name="course_info">Course Information</string>
    <string name="course_name">Course Name</string>
    <string name="empty_course_name">Please input course name.</string>
    <string name="course_edit">Edit Course</string>
    <string name="course_add">Add new Course</string>
    <string name="course_delete">Delete Course</string>
    <string name="course_action">Course Action</string>
    <string name="week">Week Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="end_time_small">End Time is before Start Time</string>
    <string name="my_info">My Information</string>
    <string name="create_new_course">Create a new course</string>
    <string name="course_addto_schedule">Add new Courses to Schedule</string>
    <string name="max_join_course">Course Taking 15 Limit is Reached</string>
    <string name="title_activity_profile">Profile</string>
    <string name="from_gallery">From GAllery</string>
    <string name="from_camera">Take a picture</string>
    <string name="image_from">Image source</string>
    <string name="profile_name">Name</string>
    <string name="profile_university">Univeristy</string>
    <string name="profile_dep">Department</string>
    <string name="profile_admission">Admission Year</string>
    <string name="profile_sex">Sex</string>
    <string name="profile_sex_boy">Boy</string>
    <string name="profile_sex_girl">Girl</string>
    <string name="title_activity_message"></string>
    <string name="title_activity_new_message">New Message</string>
    <string name="title_activity_comment">Comment</string>
    <string name="edit_post_comment">Comment...</string>
    <string name="comment_success">Post Comment Successfully. Please reflash.</string>
    <string name="post_event_success">Post message successfully. Please reflash.</string>

    <string name="profile_notify">Notification</string>
    <string name="profile_ntu">National Taiwan University</string>

    <string name="title_class_table">Class Table</string>
    <string name="title_course_list">Course Discussion</string>
    <string name="title_group">Campus Information</string>
    <string name="title_event">Notification</string>
    <string name="title_about">About</string>
    <string name="event_anonymous">Anonymous</string>
    <string name="forget_pass">Forget Password?</string>
    <string name="password_less_word">Password should be more than 8 characters.</string>
    <string name="need_verify">Your Account is not verified. Click the link in the email to verify that you own this address.</string>
    <string name="send_verify">We will send an email to your account. Please go to verify your account. Thank you.</string>
    <string name="add_course_info">If you can not find your course or the time of the course is incorrect, you can add or modify your course in schedule tab manually.</string>
    <string name="send_pass">Your password will send to your registered Email. Please check later.</string>
    <string name="need_email">Please input your registered Email.</string>
    <string name="comment_reply">Reply your message</string>
    <string name="delete_meddage">Delete Message</string>
    <string name="content">Content</string>
    <string name="related_url">Related URL</string>
    <string name="share">Share</string>
    <string name="next_course_name">Next :  </string>
    <string name="next_course_time">Time :  </string>
    <string name="next_course_loc">Loc  :  </string>
    <string name="event_type">Type</string>
    <string name="event_share_to_group">Share with Classmates</string>
    <string name="date">Date</string>
    <string name="hour">Time</string>
    <string name="event_loc">Location</string>
    <string name="event_time">Time</string>
    <string name="event_no_time">Please input starting time</string>
    <string name="event_time_expired">Starting time is expired</string>
    <string name="event_content_empty">Please input content</string>
    <string name="homework">Homework</string>
    <string name="exam">Exam</string>
    <string name="other">Others</string>
    <string name="add_to_my_schedule">Add to my schedule</string>
    <string name="volume_auto_off">Auto Switch</string>
    <string name="volume_auto_off_in_class_title">VIBRATE Switch</string>
    <string name="volume_auto_off_in_class_content">We have switched your mobile to VIBRATE or SILENCE mode.</string>
    <string name="photo_notwork">Sorry. We did not support this image format.</string>


    <string name="title_activity_image_viewer"></string>
    <string name="title_activity_web_viewer"></string>
    <string name="title_activity_add_event">Add New Schedule</string>
    <string name="title_activity_event_view">My Schedule</string>


    <string name="appwidget_text">University</string>
    <string name="add_widget">Add widget</string>

    <string-array name="auto_switch_arrays">
        <item>Disable</item>
        <item>VIBRAT</item>
        <item>SILENCE</item>
    </string-array>

    <string-array name="notify_arrays">
        <item>Close</item>
        <item>VIBRATE</item>
        <item>SOUND+VIBRATE</item>
    </string-array>

    <string-array name="week_day_arrays">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
    </string-array>

    <string-array name="event_course_type">
        <item>Home Work</item>
        <item>Exam</item>
        <item>Others</item>
    </string-array>








</resources>
