<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app.university.CreateAccountActivity"
    android:background="@drawable/login_bg"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createaccount_title"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:textIsSelectable="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createaccount_des"
        android:id="@+id/textView2"
        android:textColor="#ffffffff"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="Email"
         android:background="#ffffffff"
        android:autoText="true"
        android:padding="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPasswd"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:hint="Password"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPasswdConfirm"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:hint="Confirm Password "
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createaccount1"
        android:id="@+id/btn_createaccount"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_create_account"
        android:layout_marginTop="60dp"
        android:textColor="#FFFFFFFF" />

</LinearLayout>
