<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app.university.CourseTimeActivity"
    android:clickable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="20sp"
                android:text="@string/course_name"
                android:focusable="true"
                android:focusableInTouchMode="true" />

　　　　　　　<View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#FF000000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_course_name"
                android:layout_below="@+id/scrollView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="課程時間"
                android:id="@+id/textView5"
                android:layout_below="@+id/scrollView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:layout_marginTop="30dp" />　　

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#FF000000" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/week"
                    android:id="@+id/textView9"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sp_week_day"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:id="@+id/textView10"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_start_time"
                    android:layout_weight="1"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:id="@+id/textView11"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tx_end_time"
                    android:layout_weight="1"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="60dp"
                android:layout_gravity="top">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="確定"
                    android:id="@+id/btn_done"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn_blue"
                    android:textColor="#FFFFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
