<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="@dimen/widget_margin" android:background="@drawable/widget_raduis"
    android:orientation="horizontal"
    tools:showIn="@layout/new_app_widget2_info"
    android:id="@+id/course_widget"
    android:focusableInTouchMode="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_weight="8"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_course_name"
                android:id="@+id/textView19"
                android:textColor="#ff6a6a6a"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_course_name"
                android:textColor="#ff454545"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_course_time"
                android:id="@+id/textView21"
                android:textColor="#ff6a6a6a"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_course_time"
                android:textSize="14sp"
                android:textColor="#ff454545"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_course_loc"
                android:id="@+id/textView22"
                android:textColor="#ff6a6a6a"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_course_loc"
                android:textSize="14sp"
                android:textColor="#ff454545"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#ffcccccc"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="0dp"
        android:layout_weight="0"
        android:layout_marginBottom="5dp">
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:measureWithLargestChild="false">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:src="@mipmap/ntu"
            android:scaleType="centerInside"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>